# 2026Spring-25307140-Lab1

./: .gitignore  OAT.xml  README.md  ragConfig.json  结构说明.md
.lancedb/knowledge_base.lance/_transactions/: 0-da5a37d6-5d02-4318-8951-d05e7791de55.txn
.lancedb/knowledge_base.lance/_versions/: 1.manifest
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: oh-package-lock.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt
entry/src/main/cpp/capabilities/include/: AudioDecoder.h  CodecCallback.h  Demuxer.h  VideoDecoder.h
entry/src/main/cpp/capabilities/src/: AudioDecoder.cpp  CodecCallback.cpp  Demuxer.cpp  VideoDecoder.cpp
entry/src/main/cpp/capbilities/src/: CodecCallback.cpp  Demuxer.cpp  VideoDecoder.cpp
entry/src/main/cpp/common/include/: AudioSampleInfo.h  MediaError.h  MediaLog.h  SampleInfo.h  VideoSampleInfo.h
entry/src/main/cpp/player/include/: Player.h  PlayerNative.h
entry/src/main/cpp/player/src/: Player.cpp  PlayerNative.cpp
entry/src/main/cpp/render/include/: XComponentManager.h  XComponentRender.h
entry/src/main/cpp/render/src/: XComponentManager.cpp  XComponentRender.cpp
entry/src/main/cpp/types/libplayer/: Index.d.ts
entry/src/main/ets/common/: CommonConstants.ets  TimeUtils.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/model/: PlayerStateModel.ets
entry/src/main/ets/pages/: Index.ets
entry/src/main/ets/view/: VideoPlayView.ets
entry/src/main/ets/viewmodel/: GestureControlManager.ets  VideoPlayViewModel.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/en_US/element/: string.json
entry/src/main/resources/zh_CN/element/: string.json
